// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
}

<hr
  aria-orientation="horizontal"
  class="components-divider emotion-0 emotion-1"
  data-wp-c16t="true"
  data-wp-component="Divider"
  role="separator"
/>
`;

exports[`props should render margin 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -2,10 +2,8 @@
    Object {
      "border": "0",
      "border-bottom": "1px solid currentColor",
      "height": "0",
      "margin": "0",
-     "margin-bottom": "calc(4px * 7)",
-     "margin-top": "calc(4px * 7)",
      "width": "auto",
    },
  ]
`;

exports[`props should render marginEnd 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -2,9 +2,8 @@
    Object {
      "border": "0",
      "border-bottom": "1px solid currentColor",
      "height": "0",
      "margin": "0",
-     "margin-bottom": "calc(4px * 5)",
      "width": "auto",
    },
  ]
`;

exports[`props should render marginStart 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -2,9 +2,8 @@
    Object {
      "border": "0",
      "border-bottom": "1px solid currentColor",
      "height": "0",
      "margin": "0",
-     "margin-top": "calc(4px * 5)",
      "width": "auto",
    },
  ]
`;
